# procstat

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.h  main.c
src/analyzer/: analyzer.c  analyzer.h  calc_usage.c  calc_usage.h  parser.c  parser.h
src/fifo/: queue.c  queue.h
src/printer/: printer.c  printer.h
src/reader/: procstat.c  procstat.h  reader.c  reader.h
src/tests/: CMakeLists.txt  calc_usage_test.h  parser_test.h  procstat_test.h  queue_test.h  tests.c
